[package]
name = "pmv-launcher"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "6.0.0"
hostname-validator = "1.1.1"
open = "5.3.2"
pidlock = "0.2.1"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ['derive'] }
serde_json = "1.0.145"
sha2 = "0.10.9"
slint = { version = "1.13.1", features = ["gettext"] }

[build-dependencies]
slint-build = "1.12.1"
