[package]
name = "pmv-launcher"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
dirs = "6.0.0"
duct = "1.1.0"
hostname-validator = "1.1.1"
open = "5.3.2"
pidlock = "0.2.1"
reqwest = { version = "0.12.23", features = ['blocking'] }
rfd = "0.15.4"
serde = { version = "1.0.228", features = ['derive'] }
serde_json = "1.0.145"
sha2 = "0.10.9"
slint = { version = "1.13.1", features = ["gettext"] }

[build-dependencies]
slint-build = "1.12.1"
winres = "0.1.12"
